syntax = "proto3";

package pb;

message LocationRequest {
    string Cloud = 1;
    string SubId = 3;
}

message RegisterLocationRequest {
    repeated  LocationType Locations = 1;
}

message RegisterLocationResponse {
}

message LocationsRequest {
    string Cloud = 1;
    string Region = 2;
    string SubId = 3;
    int32 Type = 4;
}

message LocationType {
    string Name = 1;
    string Cloud = 2;
    string Region = 3;
    string SubId = 4;
    string TenantId = 5;
    string ClientId = 6;
    string Secret = 7;
    int32 Type = 8;
}

message LocationsResponse {
    repeated  LocationType Locations = 1;
}

message LocationResponse {
    LocationType Location = 1;
}

message ServiceCommand {
    string id = 1;
    string name = 2;
    bool completed = 3;
}

service LocationsService {
    // Get locations
    rpc GetLocations(LocationsRequest) returns (LocationsResponse) {}
    // Get specific location
    rpc GetLocation(LocationRequest) returns (LocationResponse) {}
    // Register specific location
    rpc RegisterLocations(RegisterLocationRequest) returns (RegisterLocationResponse) {}
}


